--- a/anaFrank_etapa1.html
+++ b/anaFrank_etapa1.html
@@ -8,127 +8,114 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="Styles/styleAnasDesplegadas.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
-<script src="js/lightbox.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <!-- Start VideoLightBox.com HEAD section -->
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <a href="index.html" ><img id="Logo" src="Header/Logo.png"/> </a>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
+            </header>
+        </div>
+        <div class="FondoAnaFrank">
+            <img src="fotosAnaCollage/annefrank1.png">
+        </div>
+
+        <div id="container">
+            <div class="Etapa1">
+                <div class="Nombre">
+                    <b>ANA FRANK</b>
+                    <div id="btnVolver">
+                        <a href="etapa_nazismo_ideologia.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
+                    </div>
+                </div>
+                <div id="ImagenPrincipal">
+                    <img src="EtapaAnas/fliafrank.png">
+
+                </div>
+                <div id="FondoTexto" class="etapa1texto">
+                    <div id="DescripcionImagen"><br><br><br>Familia Frank</div>
+                </div>
+
+                <div id="ImagenPequena">
+                    <img id="foto" src="EtapaAnas/anaymargot.png">
+                    <div id="DivDescr">
+                        <b id="Descr">Ana y Margot</b>
+                    </div>
+                </div>
+                <div id="Texto">
+                    <b id="Titulo"></b>
+                    <b class="hechos">Ana Frank naci&oacute; en Frankfurt, Alemania, el 12 de junio de 1929. Su familia estaba compuesta por su madre Edith, su padre Otto, y su hermana mayor, Margot. Otto Frank fue un empresario y aficionado a la fotograf&iacute;a que, en 1933, tras el ascenso del nazismo al poder, traslad&oacute; a su familia a Amsterdam, Holanda.<br><br>
+                        All&iacute; Margot y Ana crecieron y se educaron en la escuela p&uacute;blica.
+                        Ten&iacute;an  muchas amigas con las que compart&iacute;an juegos y paseos.
+                        <br></b>
 
 
-
-
-
-        </header>
-     </div>
-    <div class="FondoAnaFrank">
-        <img src="fotosAnaCollage/annefrank1.png">
-    </div>
-
-    <div id="container">
-        <div class="Etapa1">
-        <div class="Nombre">
-            <b>ANA FRANK</b>
-            <div id="btnVolver">
-              <a href="etapa_nazismo_ideologia.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
+                </div>
+                <div id="Seccion1">
+                </div>
+                <div id="Explicacion">
+                    <b id="TextoGrande">El 10 de mayo de 1940 Alemania invadi&oacute; Holanda. <br>
+                        Los derechos de los jud&iacute;os fueron paulatinamente limitados.
+                        La comunidad jud&iacute;a sufri&oacute; un aislamiento total.
+                        <br></b>
+                </div>
+                <div id="Explicacion2">
+                    <b id="Autor"> <br></b>
+                </div>
+                <div id="Seccion2">
+                </div>
             </div>
         </div>
-        <div id="ImagenPrincipal">
-            <img src="EtapaAnas/fliafrank.png">
-
-        </div>
-        <div id="FondoTexto" class="etapa1texto">
-            <div id="DescripcionImagen"><br><br><br>Familia Frank</div>
-        </div>
-
-        <div id="ImagenPequena">
-            <img id="foto" src="EtapaAnas/anaymargot.png">
-            <div id="DivDescr">
-            <b id="Descr">Ana y Margot</b>
-            </div>
-        </div>
-        <div id="Texto">
-            <b id="Titulo"></b>
-            <b class="hechos">Ana Frank naci&oacute; en Frankfurt, Alemania, el 12 de junio de 1929. Su familia estaba compuesta por su madre Edith, su padre Otto, y su hermana mayor, Margot. Otto Frank fue un empresario y aficionado a la fotograf&iacute;a que, en 1933, tras el ascenso del nazismo al poder, traslad&oacute; a su familia a Amsterdam, Holanda.<br><br>
-All&iacute; Margot y Ana crecieron y se educaron en la escuela p&uacute;blica.
-Ten&iacute;an  muchas amigas con las que compart&iacute;an juegos y paseos.
-<br></b>
-
-
-        </div>
-        <div id="Seccion1">
-        </div>
-        <div id="Explicacion">
-            <b id="TextoGrande">El 10 de mayo de 1940 Alemania invadi&oacute; Holanda. <br>
-Los derechos de los jud&iacute;os fueron paulatinamente limitados.
-La comunidad jud&iacute;a sufri&oacute; un aislamiento total.
- <br></b>
-        </div>
-        <div id="Explicacion2">
-            <b id="Autor"> <br></b>
-        </div>
-        <div id="Seccion2">
-        </div>
-            </div>
-        </div>
-     <div class="footer"></div>
+        <div class="footer"></div>
 
 
 
 
-<nav class="pushy pushy-left">
-    <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
+        <nav class="pushy pushy-left">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
 
-    </ul>
+            </ul>
 
-<nav>
+        </nav>
 
-<script>
+        <script>
 
-$(document).ready(function(){
+            $(document).ready(function(){
 
-$("#MenuIcon").click(function(){
+                $("#MenuIcon").click(function(){
 
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
-
-
-  });
-    </script>
+                    $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
- <script src="js/pushy.min.js"></script>
+                });
+        </script>
 
 
+        <script src="js/pushy.min.js"></script>
 
 
-
-
-
-
-
-
-
-</body>
+    </body>
+</html>
