--- a/etapa_escenario_de_horror.html
+++ b/etapa_escenario_de_horror.html
@@ -55,7 +55,7 @@
                 <img id="TextoMundo" src="SegundaPag/cuadro-txt.png">
                 <a href="etapadesp_gruposfusilamiento.html"><img id="img" src="Etapa4/fusilamiento.png"></a>
 
-                <img id="mundo" src="SegundaPag/mundo.png">
+<!--                <img id="mundo" src="SegundaPag/mundo.png">-->
             <div id="textoSubEtapas">
                <a href="etapadesp_gruposfusilamiento.html"> <b class="etapa4" id="tituloE1">GRUPOS DE FUSILAMIENTO<br></b></a>
             </div>
@@ -74,7 +74,7 @@
 
             <a href="etapadesp_trenesdesconocido.html"><img id="img2" src="Etapa4/trenes.png"></a>
 
-                <img id="mundo" src="SegundaPag/mundo.png">
+<!--                <img id="mundo" src="SegundaPag/mundo.png">-->
                 <div id="textoSubEtapas">
                 <a href="etapadesp_trenesdesconocido.html"><b class="etapa4" id="tituloE1">TRENES A LO DESCONOCIDO<br></b></a>
                     </div>
@@ -92,7 +92,7 @@
 
             <a href="etapadesp_campoConcentracionExterminio.html" ><img id="img3" src="Etapa4/campos.png"></a>
 
-                <img id="mundo" src="SegundaPag/mundo.png">
+<!--                <img id="mundo" src="SegundaPag/mundo.png">-->
         <div id="textoSubEtapas">
 
                <a href="etapadesp_campoConcentracionExterminio.html" > <b class="etapa4" id="tituloE1">CAMPOS DE CONCENTRACI&Oacute;N Y EXTERMINIO<br></b></a>
@@ -110,7 +110,7 @@
      <div id="ImagenPreE4">
            <a href="etapadesp_auschwitz.html"> <img id="img4" src="Etapa4/aw.png"></a>
 
-                <img id="mundo" src="SegundaPag/mundo.png">
+<!--                <img id="mundo" src="SegundaPag/mundo.png">-->
          <div id="textoSubEtapas">
                <a href="etapadesp_auschwitz.html">  <b class="etapa4" id="tituloE1">AUSCHWITZ<br></b></a>
              </div>
