--- a/etapadesp_boicot_quemalibros_arte.html
+++ b/etapadesp_boicot_quemalibros_arte.html
@@ -8,58 +8,58 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="Styles/style2.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
-<script src="js/lightbox.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <!-- Start VideoLightBox.com HEAD section -->
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section -->
-     <style>
-        #A{
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section -->
+        <style>
+            #A{
                 z-index: 99;
 
 
 
 
-        }
-        #Cruz{
+            }
+            #Cruz{
                 z-index:100;
-               position: absolute;
-               margin-top: -200px;
+                position: absolute;
+                margin-top: -200px;
                 margin-left: 466px;
 
 
 
 
-        }
-        #Cruz:hover {
-            opacity: 0.5;
-        }
-        .ActividadesPopUp{
-            margin-left: 375px;
-             margin-top: 16%;
-            position:absolute;
+            }
+            #Cruz:hover {
+                opacity: 0.5;
+            }
+            .ActividadesPopUp{
+                margin-left: 375px;
+                margin-top: 16%;
+                position:absolute;
 
 
-        }
-         .Actividades{
-            margin-bottom: -90px;
-         }
+            }
+            .Actividades{
+                margin-bottom: -90px;
+            }
 
-         .Actividad1{
-            margin-left: 715px;
-             margin-top: -110px;
+            .Actividad1{
+                margin-left: 715px;
+                margin-top: -110px;
 
-         }
+            }
 
 
 
@@ -79,12 +79,12 @@
 
     </head>
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <img id="Logo" src="Header/Logo.png"/>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
@@ -93,143 +93,142 @@
 
 
 
-        </header>
-     </div>
-      <div class="ActividadesPopUp" >
+            </header>
+        </div>
+        <div class="ActividadesPopUp" >
             <img id="A" src= "Actividades/pensar_quemalibros.png" style="display:none;">
 
             <img id="Cruz" src="Actividades/cruz.png" style="display:none;">
 
 
-   </div>
-    <div class="Intro">
-               <img id="imgEtapa" src="Etapa2/header.png">
-      </div>
-    <div id="container">
-                <div class="IntroT">
-                    <b id="fecha">1933 - 1939</b>
-                    <b id="nombreEtapa">Nazismo y al poder</b>
+        </div>
+        <div class="Intro">
+            <img id="imgEtapa" src="Etapa2/header.png">
+        </div>
+        <div id="container">
+            <div class="IntroT">
+                <b id="fecha">1933 - 1939</b>
+                <b id="nombreEtapa">Nazismo al poder</b>
+            </div>
+
+
+
+            <div id="Introduccion">
+                <b id="Titulo">El boicot antijud&iacute;o<br></b>
+
+            </div>
+            <div class="Introduccion2">
+
+                <b id="Texto"> Los nazis declararon un boicot general contra los jud&iacute;os alemanes. El boicot fue precedido por una masiva campa&ntilde;a propagand&iacute;stica y consisti&oacute; en intentar perjudicar econ&oacute;micamente a los comercios jud&iacute;os. Tuvo lugar el 1&deg; de Abril de 1933. Guardias y vigilantes fueron colocados frente a las tiendas y empresas de due&ntilde;os jud&iacute;os.</b>
+
+            </div>
+            <div id="Imagenes">
+                <div id="imagenGrande">
+                    <img id="imagen1" src="Etapa2/boicot_quema/1.png">
                 </div>
-
-
-
-        <div id="Introduccion">
-            <b id="Titulo">El boicot antijud&iacute;o<br></b>
-
-        </div>
-        <div class="Introduccion2">
-
-                    <b id="Texto"> Los nazis declararon un boicot general contra los jud&iacute;os alemanes. El boicot fue precedido por una masiva campa&ntilde;a propagand&iacute;stica y consisti&oacute; en intentar perjudicar econ&oacute;micamente a los comercios jud&iacute;os. Tuvo lugar el 1&deg; de Abril de 1933. Guardias y vigilantes fueron colocados frente a las tiendas y empresas de due&ntilde;os jud&iacute;os.</b>
-
-        </div>
-        <div id="Imagenes">
-            <div id="imagenGrande">
-            <img id="imagen1" src="Etapa2/boicot_quema/1.png">
-            </div>
-            <div>
-            <img id="imagen2_1" src="Etapa2/boicot_quema/2.png">
-
-            </div>
-        </div>
-        <div class="TextoPrincipal">
-            <b id="Titulo">Quema de libros<br></b>
-        </div>
-        <div class="Introduccion2">
-            <b id="Texto">El 10 de mayo de 1933 se organiz&oacute; una quema p&uacute;blica de libros en toda
-                         Alemania. Se examinaron bibliotecas, edificios p&uacute;blicos, oficinas privadas
-                         y hogares en busca de publicaciones censuradas. La campa&ntilde;a para homo&#45;
-                         geneizar la vida cultural e intelectual alemana,elimin&oacute; los principios en los que se basa toda sociedad democr&Aacute;tica.
-        </b>
-        </div>
-        <div id="ImagenDescr">
-            <img id="imagen6" src="Etapa2/boicot_quema/6quemada.png">
-             <div id="TestimonioCorto">
-            <b id="textoTestimonio"> &ldquo;All&iacute; donde se queman libros<br>
-se llevaran a la hoguera los<br>
-Seres Humanos&rdquo;<br>
-
-
-</b>
-
-            </div>
-             <div class="Actividades" >
-
-                   <img class="Actividad1" id="pensar1" src="Actividades/Pensar.png">
+                <div>
+                    <img id="imagen2_1" src="Etapa2/boicot_quema/2.png">
 
                 </div>
+            </div>
+            <div class="TextoPrincipal">
+                <b id="Titulo">Quema de libros<br></b>
+            </div>
+            <div class="Introduccion2">
+                <b id="Texto">El 10 de mayo de 1933 se organiz&oacute; una quema p&uacute;blica de libros en toda
+                    Alemania. Se examinaron bibliotecas, edificios p&uacute;blicos, oficinas privadas
+                    y hogares en busca de publicaciones censuradas. La campa&ntilde;a para homogeneizar la vida cultural e intelectual alemana,elimin&oacute; los principios en los que se basa toda sociedad democr&aacute;tica.
+                </b>
+            </div>
+            <div id="ImagenDescr">
+                <img id="imagen6" src="Etapa2/boicot_quema/6quemada.png">
+                <div id="TestimonioCorto">
+                    <b id="textoTestimonio"> &ldquo;All&iacute; donde se queman libros<br>
+                        se llevaran a la hoguera los<br>
+                        Seres Humanos&rdquo;<br>
+
+
+                    </b>
+
+                </div>
+                <div class="Actividades" >
+
+                    <img class="Actividad1" id="pensar1" src="Actividades/Pensar.png">
+
+                </div>
+            </div>
+            <div class="TextoPrincipal">
+                <b id="Titulo">Persecuci&oacute;n al arte</b>
+            </div>
+            <div class="Introduccion2">
+                <b id="Texto">En abril de 1933 se public&oacute; la primera lista de escritores prohibidos en la Alemania nazi. Esta lista inclu&iacute;a m&aacute;s de 150 nombres conocidos dentro y fuera de Alemania. M&aacute;s de 250 escritores alemanes debieron abandonar el pa&iacute;s. El 31 de Mayo de 1938 qued&oacute; aprobada la ley sobre &ldquo;Retiro de todas las muestras del arte degenerado&rdquo;. Sin reclamo posible, esculturas y cuadros desaparecieron de museos y colecciones particulares.
+
+
+                </b>
+            </div>
+            <div id="SigEtapa">
+                <pre id="SiguienteEtapa">  <a href="etapadesp_eduacionyprop.html">Etapa Anterior</a>  |  <a href="etapadesp_legislacion_nochecristales.html">Siguiente Etapa</a></pre>
+            </div>
         </div>
-        <div class="TextoPrincipal">
-            <b id="Titulo">Persecuci&oacute;n al arte</b>
+        <div class="footer">
         </div>
-        <div class="Introduccion2">
-            <b id="Texto">En abril de 1933 se public&oacute; la primera lista de escritores prohibidos en la Alemania nazi. Esta lista inclu&iacute;a m&aacute;s de 150 nombres conocidos dentro y fuera de Alemania. M&aacute;s de 250 escritores alemanes debieron abandonar el pa&iacute;s. El 31 de Mayo de 1938 qued&oacute; aprobada la ley sobre &ldquo;Retiro de todas las muestras del arte degenerado&rdquo;. Sin reclamo posible, esculturas y cuadros desaparecieron de museos y colecciones particulares.
+        <nav class="pushy pushy-left">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
+            </ul>
+
+            <nav>
+
+                <script>
+
+                    $(document).ready(function(){
+
+                        $("#MenuIcon").click(function(){
+
+                            $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
-           </b>
-        </div>
-         <div id="SigEtapa">
-      <pre id="SiguienteEtapa">  <a href="etapadesp_eduacionyprop.html">Etapa Anterior</a>  |  <a href="etapadesp_legislacion_nochecristales.html">Siguiente Etapa</a></pre>
-    </div>
-        </div>
-    <div class="footer">
-    </div>
-    <nav class="pushy pushy-left">
-     <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
-    </ul>
+                        });
 
-<nav>
+                        $("#img").hover(function(){
+                            $("#img").attr("src","SegundaPag/img_chica_hover.png");
 
-<script>
-
-$(document).ready(function(){
-
-$("#MenuIcon").click(function(){
-
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
+                        },
+                                        function(){
+                                            $("#img").attr("src","SegundaPag/img_chica.png");
+                                        });
 
 
-  });
+                        $("#pensar1").click(function(){
 
- $("#img").hover(function(){
-    $("#img").attr("src","SegundaPag/img_chica_hover.png");
-
-    },
-    function(){
-     $("#img").attr("src","SegundaPag/img_chica.png");
-  });
-
-
-   $("#pensar1").click(function(){
-
-         $("#container").css({ opacity: 0.05  });
-         $("#A").fadeIn("slow");
-         $("#Cruz").fadeIn();
+                            $("#container").css({ opacity: 0.05  });
+                            $("#A").fadeIn("slow");
+                            $("#Cruz").fadeIn();
 
 
 
 
 
-  });
-     $("#Cruz").click(function(){
+                        });
+                        $("#Cruz").click(function(){
 
 
-         $("#A").fadeOut("slow");
-         $("#Cruz").fadeOut();
-        $("#container").css({ opacity: 1  });
+                            $("#A").fadeOut("slow");
+                            $("#Cruz").fadeOut();
+                            $("#container").css({ opacity: 1  });
 
 
 
-  });
-});
+                        });
+                    });
 
-</script>
+                </script>
 
 
- <script src="js/pushy.min.js"></script>
+                <script src="js/pushy.min.js"></script>
 
 
 
@@ -241,4 +240,4 @@ $("#MenuIcon").click(function(){
 
 
 
-</body>
+                </body>
