--- a/etapadesp_campoConcentracionExterminio.html
+++ b/etapadesp_campoConcentracionExterminio.html
@@ -18,12 +18,12 @@
 <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
 <!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section -->
+            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section -->
     <style>
         #A{
                 z-index: 99;
@@ -181,7 +181,7 @@ M&aacute;s bajo no puede llegarse...No tenemos nada nuestro&#58;nos han quitado 
 
     </div>
      <div id="cuadrado2">
-        <div id="cuadradotexto1"><br>&ldquo;...Todos nosotros hab&iacute;amos cre&iacute;do alguna vez que &eacute;ramos &#39;alguien&#39; o al menos lo hab&iacute;amos imaginado. Pero ahora nos trataban como si no fu&eacute;ramos nadie, como si no existieramos&rdquo;...<br><br><b id="autor2">Viktor E. Frankl, &ldquo;El hombre en busca de sentido&rdquo;</b></b></div>
+        <div id="cuadradotexto1"><br>&ldquo;...Todos nosotros hab&iacute;amos cre&iacute;do alguna vez que &eacute;ramos &#39;alguien&#39; o al menos lo hab&iacute;amos imaginado. Pero ahora nos trataban como si no fu&eacute;ramos nadie, como si no existi&eacute;ramos&rdquo;...<br><br><b id="autor2">Viktor E. Frankl, &ldquo;El hombre en busca de sentido&rdquo;</b></b></div>
 
 
     </div>
@@ -233,7 +233,7 @@ Como el esfuerzo de guerra demandaba creciente mano de obra barata, abundante y 
     </div>
      <div id="cuadrado2">
         <div id="cuadradotexto1"><br>LA SOLIDARIDAD<br>
-            &ldquo;Los que estuvimos en campos de concentraci&oacute;n recordamos a los hombres que iban de barrac&oacute;n en barrac&oacute;n consolando a los dem&aacute;s, d&and;ndoles el &uacute;ltimo trozo de pan que les quedaba...
+            &ldquo;Los que estuvimos en campos de concentraci&oacute;n recordamos a los hombres que iban de barrac&oacute;n en barrac&oacute;n consolando a los dem&aacute;s, d&aacute;ndoles el &uacute;ltimo trozo de pan que les quedaba...
 ...al hombre se le puede arrebatar todo salvo una cosa&#58; la &uacute;ltima de las libertades humanas, la elecci&oacute;n de la actitud personal ante un conjunto de circunstancias, para decidir su propio camino.
 &rdquo;<br><br><b id="autor2">Viktor E. Frankl, &ldquo;El hombre en busca de sentido&rdquo;</b></b></div>
 
