--- a/etapadesp_gruposfusilamiento.html
+++ b/etapadesp_gruposfusilamiento.html
@@ -1,4 +1,4 @@
-<html>
+ <html>
     <head>
         <title>Grupos de Fusilamiento</title>
         <meta name="etapadesp_ascensoalpoder" content="Etapa despelegada"/>
@@ -17,12 +17,12 @@
 <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
 <!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
 <body>
 
@@ -61,7 +61,7 @@
 
         </div>
         <div id="Intro2">
-            <b> Los Einsatzgruppen,o grupos de fusilamiento, eran escuadrones itinerantes especiales que tenan&iacute; &oacute;rdenes de ejecutar a todos los jud&iacute;os de la Uni&oacute;n Sovi&eacute;tica. Los Einsatzgruppen estaban formados por miles de hombres&#58; dos tercios de ellos pose&iacute;an instrucci&oacute;n universitaria y aproximadamente la mitad ten&iacute;a t&iacute;tulos de doctor en econom&iacute;a, leyes, ciencias pol&iacute;ticas &oacute; filosof&iacute;a.
+            <b> Los Einsatzgruppen,o grupos de fusilamiento, eran escuadrones itinerantes especiales que ten&iacute;an &oacute;rdenes de ejecutar a todos los jud&iacute;os de la Uni&oacute;n Sovi&eacute;tica. Los Einsatzgruppen estaban formados por miles de hombres&#58; dos tercios de ellos pose&iacute;an instrucci&oacute;n universitaria y aproximadamente la mitad ten&iacute;a t&iacute;tulos de doctor en econom&iacute;a, leyes, ciencias pol&iacute;ticas o filosof&iacute;a.
 </b>
 
         </div>
