--- a/etapadesp_guetos.html
+++ b/etapadesp_guetos.html
@@ -9,69 +9,69 @@
         <link href="Styles/style4.css" rel="stylesheet" />
         <link href="Styles/style6.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
         <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <!-- Start VideoLightBox.com HEAD section -->
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section -->
-    <style>
-        #A{
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section -->
+        <style>
+            #A{
                 z-index: 99;
 
 
 
 
-        }
-        #Cruz{
+            }
+            #Cruz{
                 z-index:100;
-               position: absolute;
-               margin-top: -200px;
+                position: absolute;
+                margin-top: -200px;
                 margin-left: 466px;
 
 
 
 
-        }
-        #Cruz:hover {
-            opacity: 0.5;
-        }
-        .ActividadesPopUp{
-            margin-left: 375px;
-             margin-top: 16%;
-            position:absolute;
+            }
+            #Cruz:hover {
+                opacity: 0.5;
+            }
+            .ActividadesPopUp{
+                margin-left: 375px;
+                margin-top: 16%;
+                position:absolute;
 
 
-        }
-         .Actividades{
-            margin-bottom: -90px;
-         }
+            }
+            .Actividades{
+                margin-bottom: -90px;
+            }
 
-         .Actividad1{
-            margin-left: 730px;
-            margin-top: 70px;
+            .Actividad1{
+                margin-left: 730px;
+                margin-top: 70px;
 
-         }
+            }
 
-        .Actividad2{
+            .Actividad2{
 
-            margin-left: 800px;
+                margin-left: 800px;
 
 
-        }
+            }
 
-        #libro1{
-            margin-left:20px;
-        }
+            #libro1{
+                margin-left:20px;
+            }
 
         </style>
 
@@ -85,12 +85,12 @@
 
     </head>
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <a href="index.html" ><img id="Logo" src="Header/Logo.png"/> </a>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
@@ -99,56 +99,56 @@
 
 
 
-        </header>
-     </div>
-     <div class="ActividadesPopUp" >
+            </header>
+        </div>
+        <div class="ActividadesPopUp" >
             <img id="A" src= "Actividades/pensar_gueto.png" style="display:none;">
 
             <img id="Cruz" src="Actividades/cruz.png" style="display:none;">
 
 
-   </div>
-    <div class="Intro">
-               <img id="imgEtapa" src="Etapa3/img_header.png">>
+        </div>
+        <div class="Intro">
+            <img id="imgEtapa" src="Etapa3/img_header.png">>
+        </div>
+        <div id="container">
+            <div class="IntroT">
+                <b id="fecha">1939-1941</b>
+                <b id="nombreEtapa">Expansi&oacute;n y Guetos</b>
             </div>
-    <div id="container">
-                <div class="IntroT">
-                    <b id="fecha">1939-1941</b>
-                    <b id="nombreEtapa">Expansi&oacute;n y Guetos</b>
+            <div class="Actividades" >
+
+                <img class="Actividad1" id="pensar1" src="Actividades/Pensar.png">
+                <div class="Actividad2">
+                    <img  id="pelicula1" src="Actividades/cine.png">
+                    <img id="libro1" src="Actividades/libro.png">
                 </div>
-                  <div class="Actividades" >
-
-                   <img class="Actividad1" id="pensar1" src="Actividades/Pensar.png">
-                    <div class="Actividad2">
-                        <img  id="pelicula1" src="Actividades/cine.png">
-                        <img id="libro1" src="Actividades/libro.png">
-                    </div>
-                </div>
+            </div>
 
 
 
-        <div id="Introduccion" class="etapa3">
-           <div id="Texto"><br><br>Los guetos eran &aacute;reas de las ciudades que los nazis cerraban para que all&iacute; s&oacute;lo vivieran los jud&iacute;os. En esos estrechos barrios los jud&iacute;os estaban sometidos a la falta de espacio, al hambre, las enfermedades y a un agotador trabajo esclavo. Todos los aspectos de la vida cotidiana de las personas les fueron limitados y/o prohibidos.<br><br>
+            <div id="Introduccion" class="etapa3">
+                <div id="Texto"><br><br>Los guetos eran &aacute;reas de las ciudades que los nazis cerraban para que all&iacute; s&oacute;lo vivieran los jud&iacute;os. En esos estrechos barrios los jud&iacute;os estaban sometidos a la falta de espacio, al hambre, las enfermedades y a un agotador trabajo esclavo. Todos los aspectos de la vida cotidiana de las personas les fueron limitados y/o prohibidos.<br><br>
 
-Con los siguientes extractos se intentar&aacute; ilustrar la vida y la muerte en los guetos&#58;</b></div>
+                    Con los siguientes extractos se intentar&aacute; ilustrar la vida y la muerte en los guetos&#58;</b></div>
 
         </div>
-    <div id="Imagen1">
-        <img src=Etapa3/Guetos/1.png>
+        <div id="Imagen1">
+            <img src=Etapa3/Guetos/1.png>
 
-    </div>
+        </div>
 
 
-     <div id="ImagenPequena">
+        <div id="ImagenPequena">
             <img id="foto" src="Etapa3/Guetos/2.png">
             <div id="DivDescr">
-            <b id="Descr"> Rzeszow, Polonia. Jud&iacute;os obligados a dejar sus casas y trasladarse al gueto.</b>
+                <b id="Descr"> Rzeszow, Polonia. Jud&iacute;os obligados a dejar sus casas y trasladarse al gueto.</b>
             </div>
         </div>
         <div id="Texto2">
             <b id="Titulo">Traslado al gueto<br></b>
             <b id="text">&ldquo;En toda la ciudad aparecieron carteles&#58; &#45; los jud&iacute;os deben abandonar sus hogares y marchar al gueto... Pueden llevar una sola valija.&rdquo;<br><br>
-                                                  <b id="autor2">Paia Wapner de Lewin &#45; Recuerdos Imborrables<br></b></b>
+                <b id="autor2">Paia Wapner de Lewin &#45; Recuerdos Imborrables<br></b></b>
 
 
         </div>
@@ -165,55 +165,55 @@ Con los siguientes extractos se intentar&aacute; ilustrar la vida y la muerte en
         <div id="Texto3">
             <b id="Titulo">Tras alambre de pua<br><br></b>
             <b id="text">20 de Mayo de 1941<br>&ldquo;Del otro lado del alambre de p&uacute;a la primavera brilla con todo su encanto. Desde mi ventana puedo ver a las muchachas con ramilletes de lilas caminando por la parte &ldquo;aria&rdquo; de la calle, hasta aspiro la tierna fragancia de los pimpollos recien abiertos. Pero no hay se&ntilde;ales de la primavera en el gueto. Ni pimpollos ni mariposas.&rdquo;<br>
-                                       <b id="autor2">Mary Berg. Gueto de Varsovia<br></b></b>
+                <b id="autor2">Mary Berg. Gueto de Varsovia<br></b></b>
 
         </div>
-    <div id="cuadrado1">
-        <div id="cuadradotexto1"><br>El hambre &#45; Informe de un M&eacute;dico<br>&ldquo;Personas activas comprometidas y en&eacute;rgeticas, se tranforman en criaturas ap&aacute;ticas y son&aacute;mbulas. No tienen fuerzas ni para comer. Mueren en la ejecucci&oacute;n de efuerzos f&iacute;sicos tales como encontrar comida , a veces incluso, con un trozo de pan en la mano. En el gueto imperaban el forcejeo entre el hambre y el tifus. Por eso, era  imprescindible el contrabando para la supervivencia.&rdquo; <br>
-      <b id="autor2"> S.Bruchfeld y P.Levine, &ldquo;De esto contar&eacute;is&rdquo;
-  </b></div>
+        <div id="cuadrado1">
+            <div id="cuadradotexto1"><br>El hambre &#45; Informe de un M&eacute;dico<br>&ldquo;Personas activas comprometidas y en&eacute;rgeticas, se tranforman en criaturas ap&aacute;ticas y son&aacute;mbulas. No tienen fuerzas ni para comer. Mueren en la ejecucci&oacute;n de efuerzos f&iacute;sicos tales como encontrar comida , a veces incluso, con un trozo de pan en la mano. En el gueto imperaban el forcejeo entre el hambre y el tifus. Por eso, era  imprescindible el contrabando para la supervivencia.&rdquo; <br>
+                <b id="autor2"> S.Bruchfeld y P.Levine, &ldquo;De esto contar&eacute;is&rdquo;
+                </b></div>
 
 
-    </div>
-     <div id="cuadrado2">
-        <div id="cuadradotexto1"><br>&ldquo;En las calles siempre hab&iacute;a pobres que ped&iacute;an limosnas y, a veces, se mpr&iacute;an all&iacute; mismo, en la calle, a causa del hambre o el fr&iacute;o &rdquo;<br><b id="autor2">Zimra Kaminski</b></b></div>
+        </div>
+        <div id="cuadrado2">
+            <div id="cuadradotexto1"><br>&ldquo;En las calles siempre hab&iacute;a pobres que ped&iacute;an limosnas y, a veces, se mor&iacute;an all&iacute; mismo, en la calle, a causa del hambre o el fr&iacute;o &rdquo;<br><b id="autor2">Zimra Kaminski</b></b></div>
 
 
-    </div>
+        </div>
     <div id="ImagenPequena">
-            <img id="foto" src="Etapa3/Guetos/3.png">
-            <div id="DivDescr">
+        <img id="foto" src="Etapa3/Guetos/3.png">
+        <div id="DivDescr">
             <b id="Descr">Gueto de Varsovia, Polonia. 19/9/1941. Una mujer vendiendo brazaletes. </b>
-            </div>
         </div>
-        <div id="Texto4">
-            <b id="Titulo">El trabajo esclavo<br></b>
-            <b id="text">&ldquo;A mi padre de m&aacute;s de 60 a&ntilde;os, lo atraparon en la calle y lo enviaron a las v&iacute;as f&eacute;rreas a arrastrar durmientes. Al anochecer lleg&oacute; a duras penas a casa con las manos lastimadas y con moretones azules en todo el cuerpo por los golpes recibidos de los criminales nazis, que no hac&iacute;an m&aacute;s que empujarlos para que trabajasen m&aacute;s r&aacute;pido.&rdquo;<br><br>
-                                             <b id="autor2">Paia Wapner de Lewin<br></b></b>
+    </div>
+    <div id="Texto4">
+        <b id="Titulo">El trabajo esclavo<br></b>
+        <b id="text">&ldquo;A mi padre de m&aacute;s de 60 a&ntilde;os, lo atraparon en la calle y lo enviaron a las v&iacute;as f&eacute;rreas a arrastrar durmientes. Al anochecer lleg&oacute; a duras penas a casa con las manos lastimadas y con moretones azules en todo el cuerpo por los golpes recibidos de los criminales nazis, que no hac&iacute;an m&aacute;s que empujarlos para que trabajen m&aacute;s r&aacute;pido.&rdquo;<br><br>
+            <b id="autor2">Paia Wapner de Lewin<br></b></b>
 
 
-        </div>
+    </div>
     <div id="ImagenPequena2">
-            <img id="foto" src="Etapa3/Guetos/4.png">
-            <div id="DivDescr">
+        <img id="foto" src="Etapa3/Guetos/4.png">
+        <div id="DivDescr">
             <b id="Descr">Gueto de Varsovia, Polonia, 1940-1943</b>
-            </div>
         </div>
-        <div id="Texto2">
-            <b id="Titulo">Solidaridad &#45;<br> La comisi&oacute;n de la cuchara<br></b>
-            <b id="text">&ldquo;Cada mi&eacute;rcoles se cocina una olla especial de sopa para el hospital de ni&ntilde;os. La comisi&oacute;n de la cuchara recolecta 2 veces por semana una cucharada de az&uacute;car o 2 de harina y avena de cada inquilino... Se recolectan papas, zanahorias, remolachas, repollos y otros para el orfanato Janusz Korczak...cada dos semanas 2 miembros son designados para realizar colectas. Los ni&ntilde;os eran nuestra principal preocupaci&oacute;n&rdquo;<br><br>
-                                                <b id="autor2">Mary Berg, El gueto de Varsovia<br></b></b>
+    </div>
+    <div id="Texto2">
+        <b id="Titulo">Solidaridad &#45;<br> La comisi&oacute;n de la cuchara<br></b>
+        <b id="text">&ldquo;Cada mi&eacute;rcoles se cocina una olla especial de sopa para el hospital de ni&ntilde;os. La comisi&oacute;n de la cuchara recolecta 2 veces por semana una cucharada de az&uacute;car o 2 de harina y avena de cada inquilino... Se recolectan papas, zanahorias, remolachas, repollos y otros para el orfanato Janusz Korczak...cada dos semanas 2 miembros son designados para realizar colectas. Los ni&ntilde;os eran nuestra principal preocupaci&oacute;n&rdquo;<br><br>
+            <b id="autor2">Mary Berg, El gueto de Varsovia<br></b></b>
 
 
-        </div>
+    </div>
     <div id="cuadrado1">
         <div id="cuadradotexto1"><br>El hacinamiento <br>&ldquo; El distrito jud&iacute;o cubre un &aacute;rea de 403 hect&aacute;reas. Calculamos que viven all&iacute; 470.000 y 590.000 jud&iacute;os.La densidad es de 110.800 personas por km2... El barrio jud&iacute;o comprende 27.000 apartamentos con una ocupaci&oacute;n promedio de 7 personas por habitaci&oacute;n.El barrio jud&iacute;o est&aacute; separado del resto de la ciudad por muros de 3 metros de altura y un metro adicional de alambre de p&uacute;a...&rdquo;<br>Informe Alem&aacute;n de 1941<br>
         </div>
 
 
     </div>
-     <div id="cuadrado2">
-        <div id="cuadradotexto1"><br>&ldquo;Cuando entr&eacute; a casa me recibi&oacute; mi hermanito Leibush y mostr&aacute;ndome el cuaderno me dijo&#58; <br> &#45; Te gustan mis deberes &#63;...<br> &#45; Te felicito, querido&#59;estoy muy orgullosa de t&iacute;.Lo abrac&eacute; y pens&eacute;, pobrecito&#59; &eta;l ya no recuerda c&oacute;mo es la leche, la fruta, ni el pollo, ni tantas cosas que existen en el mundo. Solamente por dibujos los conoce. Una vez me pregunt&oacute; c&oacute;mo es la banana y la naranja. Yo trat&eacute; de explicarle pero con poco &eacute;xito, al final le dije que cuando termine la guerra, lo primero que voy a tratar de conseguir para &eacute;l, ser&aacute; la fruta<br> Si Dios quiere, tratar&eacute; de no olvid&aacute;rmelo&rdquo;<br>Ana Vinocur, &ldquo;Sin t&iacute;tulo. Testimonio de un superviviente del holocausto jud&iacute;o &rdquo;</b></div>
+    <div id="cuadrado2">
+        <div id="cuadradotexto1"><br>&ldquo;Cuando entr&eacute; a casa me recibi&oacute; mi hermanito Leibush y mostr&aacute;ndome el cuaderno me dijo&#58; <br> &#45; Te gustan mis deberes &#63;...<br> &#45; Te felicito, querido&#59; estoy muy orgullosa de t&iacute;. Lo abrac&eacute; y pens&eacute;, pobrecito&#59; &eaccute;l ya no recuerda c&oacute;mo es la leche, la fruta, ni el pollo, ni tantas cosas que existen en el mundo. Solamente por dibujos los conoce. Una vez me pregunt&oacute; c&oacute;mo es la banana y la naranja. Yo trat&eacute; de explicarle pero con poco &eacute;xito, al final le dije que cuando termine la guerra, lo primero que voy a tratar de conseguir para &eacute;l, ser&aacute; la fruta<br> Si Dios quiere, tratar&eacute; de no olvid&aacute;rmelo&rdquo;<br>Ana Vinocur, &ldquo;Sin t&iacute;tulo. Testimonio de un superviviente del holocausto jud&iacute;o &rdquo;</b></div>
 
 
     </div>
@@ -221,73 +221,71 @@ Con los siguientes extractos se intentar&aacute; ilustrar la vida y la muerte en
 
 
 
-    <div id="SigEtapa">
-       <pre id="SiguienteEtapa">  <a href="etapadesp_expansion.html">Etapa Anterior</a>  |  <a href="etapa_escenario_de_horror.html">Siguiente Etapa</a></pre>
-    </div>
-    </div>
-    <div class="footer">
-    </div>
-    <nav class="pushy pushy-left">
+<div id="SigEtapa">
+    <pre id="SiguienteEtapa">  <a href="etapadesp_expansion.html">Etapa Anterior</a>  |  <a href="etapa_escenario_de_horror.html">Siguiente Etapa</a></pre>
+</div>
+</div>
+<div class="footer">
+</div>
+<nav class="pushy pushy-left">
     <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="actividades.html">Actividades</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="perfil.html">Mi Perfil</a></li>
     </ul>
 
-<nav>
+    <nav>
 
-<script>
+        <script>
 
-$(document).ready(function(){
+            $(document).ready(function(){
 
-$("#MenuIcon").click(function(){
+                $("#MenuIcon").click(function(){
 
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
-
-
-  });
-
- $("#img").hover(function(){
-    $("#img").attr("src","SegundaPag/img_chica_hover.png");
-
-    },
-    function(){
-     $("#img").attr("src","SegundaPag/img_chica.png");
-  });
-});
-
-      $("#pensar1").click(function(){
-
-         $("#container").css({ opacity: 0.05  });
-         $("#A").fadeIn("slow");
-         $("#Cruz").fadeIn();
+                    $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
+                });
 
+                $("#img").hover(function(){
+                    $("#img").attr("src","SegundaPag/img_chica_hover.png");
 
+                },
+                                function(){
+                                    $("#img").attr("src","SegundaPag/img_chica.png");
+                                });
+            });
 
-  });
-     $("#Cruz").click(function(){
+            $("#pensar1").click(function(){
 
-
-         $("#A").fadeOut("slow");
-         $("#Cruz").fadeOut();
-        $("#container").css({ opacity: 1  });
-
-
-
-  });
+                $("#container").css({ opacity: 0.05  });
+                $("#A").fadeIn("slow");
+                $("#Cruz").fadeIn();
 
 
 
 
-</script>
+
+            });
+            $("#Cruz").click(function(){
 
 
- <script src="js/pushy.min.js"></script>
+                $("#A").fadeOut("slow");
+                $("#Cruz").fadeOut();
+                $("#container").css({ opacity: 1  });
 
 
+
+            });
+
+
+
+
+        </script>
+
+
+        <script src="js/pushy.min.js"></script>
 
 
 
@@ -297,4 +295,6 @@ $("#MenuIcon").click(function(){
 
 
 
-</body>
+
+
+        </body>
