--- a/etapadesp_rescatadores.html
+++ b/etapadesp_rescatadores.html
@@ -19,12 +19,12 @@
 <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
 <!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
 <body>
 
@@ -96,7 +96,7 @@ Asimismo los daneses se preocuparon por los 464 jud&iacute;os que no lograron sa
             <b id="Titulo">DIPLOM&Aacute;TICOS - VISA A LA VIDA<br></b>
         </div>
         <div class="Introduccion2">
-            <b id="Texto">Los diplom&aacute;ticos en los pa&iacute;ses ocupados, gozaban de un status especial que les permit&iacute;a brindar una significativa ayuda los refugiados. Sin embargo, para poder hacerlo, deb&iacute;an actuar, en muchos casos,  en contra de las &oacute;rdenes de los pa&iacute;ses a los que representaban.
+            <b id="Texto">Los diplom&aacute;ticos en los pa&iacute;ses ocupados, gozaban de un status especial que les permit&iacute;a brindar una significativa ayuda a los refugiados. Sin embargo, para poder hacerlo, deb&iacute;an actuar, en muchos casos,  en contra de las &oacute;rdenes de los pa&iacute;ses a los que representaban.
 No obstante ello, algunos, como faros solitarios, guiaron a los refugiados ayud&aacute;ndoles a pasar las rocas mortales y los campos minados de la Sho&aacute;.
 
 
@@ -105,7 +105,7 @@ No obstante ello, algunos, como faros solitarios, guiaron a los refugiados ayud&
             <div id="ImagenPequena">
             <img id="foto" src="Etapa5/Rescatadores/Img/dos.png">
             <div id="DivDescr">
-            <b id="Descr"> una mini descripcion del lo que es la foto y alguna cosa mas</b>
+            <b id="Descr"> Raoul Wallemberg</b><!--//TODO agregar descripcion de la foto-->
             </div>
         </div>
         <div id="Texto2">
@@ -122,7 +122,7 @@ Emiti&oacute; miles de &ldquo;pases protectores&rdquo; y escondi&oacute; a unos 
             <div id="ImagenPequena">
             <img id="foto" src="Etapa5/Rescatadores/Img/uno.png">
             <div id="DivDescr">
-            <b id="Descr">Jud&iacute;os esperando en frente al consulado Japoenes para conseguir Visas, Kaunas, Lithuania</b>
+            <b id="Descr">Jud&iacute;os esperando en frente al consulado Japon&eacute;s para conseguir Visas, Kaunas, Lithuania</b>
             </div>
         </div>
         <div id="Texto2">
@@ -152,9 +152,7 @@ Su insubordinaci&oacute;n lo oblig&oacute; a abandonar el servicio diplom&aacute
         </div>
         <div id="Texto3">
             <b id="Titulo">EJEMPLOS INDIVIDUALES<br></b>
-            <b id="text">En este mundo en el que, por momentos, nos parece estar perdiendo la batalla contra el fanatismo y el odio, vale la pena conocer ejemplos de bondad, generosidad e incluso sacrificio personal en la defensa de otros seres humanos.
-
-Los rescatadores les brindaron a las v&iaute;ctimas además de su valerosa ayuda, la posibilidad de seguir creyendo en que las cualidades humanas y el amor al pr&oacute;jimo pueden imponerse frente al adoctrinamiento.
+            <b id="text">Los rescatadores les brindaron a las v&iacute;ctimas además de su valerosa ayuda, la posibilidad de seguir creyendo en que las cualidades humanas y el amor al pr&oacute;jimo pueden imponerse frente al adoctrinamiento.
 
 <br><br></b>
 
