--- a/etapadesp_resistencia.html
+++ b/etapadesp_resistencia.html
@@ -1,4 +1,4 @@
-<html>
+ <html>
     <head>
         <title>Resistencia</title>
         <meta name="Resistencia" content="Etapa despelegada"/>
@@ -11,8 +11,8 @@
         <link href="Styles/style5.css" rel="stylesheet" />
         <link href="Styles/style7.css" rel="stylesheet" />
 
-		<link rel="stylesheet" type="text/css" href="cssEfectos/component.css" />
-		<script src="jsEfectos/modernizr.custom.js"></script>
+        <link rel="stylesheet" type="text/css" href="cssEfectos/component.css" />
+        <script src="jsEfectos/modernizr.custom.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
          <link rel="stylesheet" href="css/pushy.css">
          <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
@@ -23,12 +23,12 @@
 <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
 <!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section -->
+            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section -->
        <style>
         #A{
                 z-index: 99;
@@ -125,7 +125,7 @@ Resisti&oacute; quien sobrevivi&oacute; <br>
 Resisti&oacute; quien combati&oacute; armado en las calles de ciudades, monta&ntilde;as y
 bosques <br>
 Resisti&oacute; quien se rebel&oacute; en los campos de exterminio <br>
-Resisti&oacute; quien se rebel&oacute; en los ghettos, entre muros ca&iacute;dos, en la revuelta
+Resisti&oacute; quien se rebel&oacute; en los guetos, entre muros ca&iacute;dos, en la revuelta
 m&aacute;s destituida de esperanzas que supo alguna vez el ser humano. </b>
 
 
@@ -149,7 +149,7 @@ m&aacute;s destituida de esperanzas que supo alguna vez el ser humano. </b>
 Exist&iacute;a en algunos guetos una prensa clandestina que se publicaba en forma irregular.<br><br>
 
 &ldquo;De vez en cuando mi padre trae a casa alguno de esos peri&oacute;dicos y luego se compromete a entregarlo en la mano de otra persona cuyo nombre se niega a revelar. As&iacute; esas hojas pasan de casa en casa&rdquo;.<br>
-A.	Huberman- El Holocausto
+A.    Huberman- El Holocausto
 </div>
         </div>
         <div id="ImagenPrincipalSeccion">
@@ -200,7 +200,7 @@ Partes del archivo fueron enterrados en cajas met&aacute;licas y bidones de lech
         </div>
         <div class="Introduccion2">
 
-                    <b id="Texto"> Los combatientes del ghetto de Varsovia se convirtieron en un s&iacute;mbolo de la lucha por la dignidad.
+                    <b id="Texto"> Los combatientes del gueto de Varsovia se convirtieron en un s&iacute;mbolo de la lucha por la dignidad.
 A pesar de la desigualdad de fuerzas, el levantamiento del gueto de Varsovia fue la batalla m&aacute;s prolongada que debi&oacute; enfrentar el ej&eacute;rcito alem&aacute;n en territorio ocupado hasta esa fecha, con excepci&oacute;n de Yugoslavia.
 </b>
 
