--- a/anaFrank_etapa2.html
+++ b/anaFrank_etapa2.html
@@ -8,139 +8,120 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="Styles/styleAnasDesplegadas.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
-<script src="js/lightbox.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <!-- Start VideoLightBox.com HEAD section -->
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
     <style>
         #etapa2{
             margin-top:100px;
         }
 
-        </style>
+    </style>
 
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <a href="index.html" ><img id="Logo" src="Header/Logo.png"/> </a>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
 
-
-
-
-
-        </header>
-     </div>
-    <div class="FondoAnaFrank">
-        <img src="fotosAnaCollage/annefrank1.png">
-    </div>
-
-    <div id="container">
-
-        <div class="Nombre">
-            <b>ANA FRANK</b>
-            <div id="btnVolver">
-              <a href="etapa_nazismo_al_poder.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
-            </div>
+            </header>
+        </div>
+        <div class="FondoAnaFrank">
+            <img src="fotosAnaCollage/annefrank1.png">
         </div>
 
+        <div id="container">
 
-<div id="etapa2">
-
-            <div class="ImagenPrincipal2">
-                <img src="EtapaAnas/ana1941.png">
-            </div>
-            <div class="ImagenesPequenas">
-                <img class="imagenP" src="EtapaAnas/camion.png">
-                <div class="imagenPequena2">
-                <img class ="imagenP" src="EtapaAnas/anachica.png">
-                </div>
-                <div class="imagenRectangulo">
-                    <img class="imagenR" src="EtapaAnas/rectangulo.jpg">
+            <div class="Nombre">
+                <b>ANA FRANK</b>
+                <div id="btnVolver">
+                    <a href="etapa_nazismo_al_poder.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
                 </div>
             </div>
-       <div class="clearfix"></div>
-        <div id="ImagenPequena">
-            <img id="foto" src="EtapaAnas/diario.png">
-            <div id="DivDescr">
-            <b id="Descr">El Diario</b>
+
+            <div id="etapa2">
+
+                <div class="ImagenPrincipal2">
+                    <img src="EtapaAnas/ana1941.png">
+                </div>
+                <div class="ImagenesPequenas">
+                    <img class="imagenP" src="EtapaAnas/camion.png">
+                    <div class="imagenPequena2">
+                        <img class ="imagenP" src="EtapaAnas/anachica.png">
+                    </div>
+                    <div class="imagenRectangulo">
+                        <img class="imagenR" src="EtapaAnas/rectangulo.jpg">
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+                <div id="ImagenPequena">
+                    <img id="foto" src="EtapaAnas/diario.png">
+                    <div id="DivDescr">
+                        <b id="Descr">El Diario</b>
+                    </div>
+
+                </div>
+                <div id="Texto">
+                    <b id="Titulo"></b>
+                    <b id="text">
+
+                        <b class="hechos">  El 12 de junio de 1942, Ana cumpl&iacute;a 13 a&ntilde;os y recib&iacute;a de regalo un Diario al que llam&oacute;
+                            Kitty y al cual confiaría todos sus secretos.<br><br></b>
+
+                        S&aacute;bado, 20 de junio de 1942.
+                        (...)<br><br>
+                        &ldquo;Despu&eacute;s de 1940, nuestra buena &eacute;poca iba a terminar r&aacute;pidamente: ante todo la guerra, la capitulaci&oacute;n, y la invasi&oacute;n de los alemanes llev&aacute;ndonos a la miseria. Disposici&oacute;n tras disposici&oacute;n contra los jud&iacute;os. Los jud&iacute;os obligados a llevar la estrella, a ceder sus bicicletas...
+                        As&iacute; segu&iacute;amos tirando, sin hacer esto, sin hacer aquello, Jopie me dice siempre: &ldquo;No me atrevo a hacer nada, de miedo a que est&eacute; prohibido&rdquo;. Nuestra libertad, pues, est&aacute; muy restringida: con todo, la vida es a&uacute;n soportable.&rdquo;
+
+
+                        <br></b>
+                </div>
             </div>
 
         </div>
-        <div id="Texto">
-            <b id="Titulo"></b>
-            <b id="text">
+        <div class="footer"></div>
 
-              <b class="hechos">  El 12 de junio de 1942, Ana cumpl&iacute;a 13 a&ntilde;os y recib&iacute;a de regalo un Diario al que llam&oacute;
-Kitty y al cual confiaría todos sus secretos.<br><br></b>
+        <nav class="pushy pushy-left">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="#">Mi Perfil</a></li>
+            </ul>
 
-S&aacute;bado, 20 de junio de 1942.
-(...)<br><br>
-&ldquo;Despu&eacute;s de 1940, nuestra buena &eacute;poca iba a terminar r&aacute;pidamente: ante todo la guerra, la capitulaci&oacute;n, y la invasi&oacute;n de los alemanes llev&aacute;ndonos a la miseria. Disposici&oacute;n tras disposici&oacute;n contra los jud&iacute;os. Los jud&iacute;os obligados a llevar la estrella, a ceder sus bicicletas...
-As&iacute; segu&iacute;amos tirando, sin hacer esto, sin hacer aquello, Jopie me dice siempre: &ldquo;No me atrevo a hacer nada, de miedo a que est&eacute; prohibido&rdquo;. Nuestra libertad, pues, est&aacute; muy restringida: con todo, la vida es a&uacute;n soportable.&rdquo;
+        </nav>
 
+        <script>
 
-<br></b>
+            $(document).ready(function(){
 
+                $("#MenuIcon").click(function(){
 
-        </div>
-            </div>
-
-           </div>
-     <div class="footer"></div>
+                    $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
+                });
+        </script>
 
 
-<nav class="pushy pushy-left">
-    <ul>
-           <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="#">Mi Perfil</a></li>
-    </ul>
+        <script src="js/pushy.min.js"></script>
 
-<nav>
-
-<script>
-
-$(document).ready(function(){
-
-$("#MenuIcon").click(function(){
-
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
-
-
-  });
-    </script>
-
-
- <script src="js/pushy.min.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-</body>
+    </body>
+</html>
