--- a/anaVinocur_etapa2.html
+++ b/anaVinocur_etapa2.html
@@ -17,12 +17,12 @@
 <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
 <!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
     <style>
         #etapa2{
             margin-top:100px;
@@ -86,7 +86,7 @@
         <div id="Texto">
             <b id="Titulo"></b>
             <b class="hechos">Cuando  los nazis ocuparon Polonia en 1939 tomaron medidas discriminatorias hac&iacute;a los jud&iacute;os.
-Su propia amiga de la escuela  p&uacute; le hizo sentir esa discriminaci&oacute;n &#58; &ldquo;No tienes patria&rdquo; &#45; le dijo. <br>
+Su propia amiga de la escuela  p&uacute;blica le hizo sentir esa discriminaci&oacute;n &#58; &ldquo;No tienes patria&rdquo; &#45; le dijo. <br>
 
 
 Ana se sinti&oacute; desconcertada.
