--- a/etapa_expansion_guetos.html
+++ b/etapa_expansion_guetos.html
@@ -8,179 +8,171 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="SegundaPag/style.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.jswipe-0.1.2.js"></script>
-</head>
+        <script type="text/javascript" src="js/jquery.jswipe-0.1.2.js"></script>
+    </head>
 
 
-<body>
+    <body>
 
         <div id="cont-header">
-        <header id="encabezado">
+            <header id="encabezado">
                 <a href="index.html" ><img id="Logo" src="Header/Logo.png"/> </a>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
 
             </header>
         </div>
-    <div class="Intro">
-               <img id="imgEtapa" src="Etapa3/img_header.png">
+        <div class="Intro">
+            <img id="imgEtapa" src="Etapa3/img_header.png">
 
-      </div>
-    <div id="container">
-                <div class="IntroT">
-                    <b id="fecha">1939 - 1941</b>
-                    <b id="nombreEtapa">Expansi&oacute;n y Guetos</b>
-                </div>
-        <div id="AnaFrank">
-                   <a href="anaFrank_etapa3.html"> <img src="Anas/anaF.png"></a>
-                </div>
-                <div id="AnaVinocur">
-                   <a href="anaVinocur_etapa3.html"> <img src="Anas/anaV.png"></a>
-                </div>
-                <div id="HanaBrady">
-                   <a href="hanaBrady_etapa3.html"> <img src="Anas/anaB.png"></a>
-                </div>
+        </div>
+        <div id="container">
+            <div class="IntroT">
+                <b id="fecha">1939 - 1941</b>
+                <b id="nombreEtapa">Expansi&oacute;n y Guetos</b>
+            </div>
+            <div id="AnaFrank">
+                <a href="anaFrank_etapa3.html"> <img src="Anas/anaF.png"></a>
+            </div>
+            <div id="AnaVinocur">
+                <a href="anaVinocur_etapa3.html"> <img src="Anas/anaV.png"></a>
+            </div>
+            <div id="HanaBrady">
+                <a href="hanaBrady_etapa3.html"> <img src="Anas/anaB.png"></a>
+            </div>
 
 
             <div id="Introduccion">
-                    <b> </b>
+                <b> </b>
             </div>
 
             <div id="ImagenPreE1">
                 <img id="TextoMundo" src="SegundaPag/cuadro-txt.png">
-             <a href="etapadesp_expansion.html"><img id="img" src="Etapa3/expansion.png"></a>
+                <a href="etapadesp_expansion.html"><img id="img" src="Etapa3/expansion.png"></a>
 
-                <img id="mundo" src="SegundaPag/mundo.png">
-            <div id="textoSubEtapas">
-               <a href="etapadesp_expansion.html"> <b class="etapa3" id="tituloE1">EXPANSI&Oacute;N<br></b> </a>
-            </div>
-            <div class="textoSubEtapas2">
-                <b id="textoE11">El 1&deg; de setiembre de 1939 Alemania invadi&oacute; Polonia provocando el inicio de la Segunda Guerra Mundial.</b>
+                <!--                <img id="mundo" src="SegundaPag/mundo.png">-->
+                <div id="textoSubEtapas">
+                    <a href="etapadesp_expansion.html"> <b class="etapa3" id="tituloE1">EXPANSI&Oacute;N<br></b> </a>
+                </div>
+                <div class="textoSubEtapas2">
+                    <b id="textoE11">El 1&deg; de setiembre de 1939 Alemania invadi&oacute; Polonia provocando el inicio de la Segunda Guerra Mundial.</b>
 
                 </div>
 
             </div>
-        <div class="clearfix">
-    <!-- put your divs here //-->
-</div>
-     <div id="ImagenPreE2">
+            <div class="clearfix">
+                <!-- put your divs here //-->
+            </div>
+            <div id="ImagenPreE2">
 
-           <a href="etapadesp_guetos.html"><img id="img2" src="Etapa3/gueto.png"></a>
+                <a href="etapadesp_guetos.html"><img id="img2" src="Etapa3/gueto.png"></a>
 
-                <img id="mundo" src="SegundaPag/mundo.png">
-        <div id="textoSubEtapas">
-                <a href="etapadesp_guetos.html"><b class="etapa3" id="tituloE1">GUETOS<br></b> </a>
+                <!--                <img id="mundo" src="SegundaPag/mundo.png">-->
+                <div id="textoSubEtapas">
+                    <a href="etapadesp_guetos.html"><b class="etapa3" id="tituloE1">GUETOS<br></b> </a>
+                </div>
+                <div class="textoSubEtapas2">
+                    <b id="textoE11">A medida que los nazis conquistaron territorios, crearon guetos para los jud&iacute;os. </b>
+
+
+                </div>
+            </div>
+            <div class="clearfix">
+                <!-- put your divs here //-->
+            </div>
+
+            <div id="SigEtapa">
+
+                <pre id="SiguienteEtapa">  <a href="etapa_nazismo_al_poder.html">Etapa Anterior</a>  |  <a href="etapa_escenario_de_horror.html">Siguiente Etapa</a></pre>
+
+
+
+
+            </div>
+
+
+
         </div>
-         <div class="textoSubEtapas2">
-                <b id="textoE11">A medida que los nazis conquistaron territorios, crearon guetos para los jud&iacute;os. </b>
-
-
-                </div>
-            </div>
-        <div class="clearfix">
-    <!-- put your divs here //-->
-</div>
-
-    <div id="SigEtapa">
-
-        <pre id="SiguienteEtapa">  <a href="etapa_nazismo_al_poder.html">Etapa Anterior</a>  |  <a href="etapa_escenario_de_horror.html">Siguiente Etapa</a></pre>
-
-
-
-
-    </div>
-
-
-
-    </div>
-    <div class="footer"></div>
-    <nav class="pushy pushy-left">
-                <ul>
+        <div class="footer"></div>
+        <nav class="pushy pushy-left">
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
             </ul>
 
         </nav>
 
-<script>
+        <script>
 
-$(document).ready(function(){
-
-
-
-$("#MenuIcon").click(function(){
-
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
-
-
-  });
-
- $("#img").hover(function(){
-    $("#img").attr("src","Etapa3/expansion_hover.png");
-
-    },
-    function(){
-     $("#img").attr("src","Etapa3/expansion.png");
-  });
-
- $("#img2").hover(function(){
-    $("#img2").attr("src","Etapa3/gueto_hover.png");
-
-    },
-    function(){
-     $("#img2").attr("src","Etapa3/gueto.png");
-  });
-
-    $("#img3").hover(function(){
-    $("#img3").attr("src","SegundaPag/img_chica_hover.png");
-
-    },
-    function(){
-     $("#img3").attr("src","SegundaPag/img_chica.png");
-  });
-
- $("#img4").hover(function(){
-    $("#img4").attr("src","SegundaPag/img_chica_hover.png");
-
-    },
-    function(){
-     $("#img4").attr("src","SegundaPag/img_chica.png");
-  });
-
-
-    $("#mundo").hover(function(){
-    $("#mundo").attr("src","SegundaPag/mundo-hover.png");
-    $("#TextoMundo").show();
-
-
-    },
-    function(){
-     $("#mundo").attr("src","SegundaPag/mundo.png");
-     $("#TextoMundo").hide();
-
-  });
-});
-
-</script>
-
-
- <script src="js/pushy.min.js"></script>
+            $(document).ready(function(){
 
 
 
+                $("#MenuIcon").click(function(){
+
+                    $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
+                });
+
+                $("#img").hover(function(){
+                    $("#img").attr("src","Etapa3/expansion_hover.png");
+
+                },
+                                function(){
+                                    $("#img").attr("src","Etapa3/expansion.png");
+                                });
+
+                $("#img2").hover(function(){
+                    $("#img2").attr("src","Etapa3/gueto_hover.png");
+
+                },
+                                 function(){
+                                     $("#img2").attr("src","Etapa3/gueto.png");
+                                 });
+
+                $("#img3").hover(function(){
+                    $("#img3").attr("src","SegundaPag/img_chica_hover.png");
+
+                },
+                                 function(){
+                                     $("#img3").attr("src","SegundaPag/img_chica.png");
+                                 });
+
+                $("#img4").hover(function(){
+                    $("#img4").attr("src","SegundaPag/img_chica_hover.png");
+
+                },
+                                 function(){
+                                     $("#img4").attr("src","SegundaPag/img_chica.png");
+                                 });
 
 
+                $("#mundo").hover(function(){
+                    $("#mundo").attr("src","SegundaPag/mundo-hover.png");
+                    $("#TextoMundo").show();
 
 
+                },
+                                  function(){
+                                      $("#mundo").attr("src","SegundaPag/mundo.png");
+                                      $("#TextoMundo").hide();
+
+                                  });
+            });
+
+        </script>
 
 
-</body>
+        <script src="js/pushy.min.js"></script>
+
+
+    </body>
+</html>
