--- a/etapadesp_ascensonazismo.html
+++ b/etapadesp_ascensonazismo.html
@@ -17,12 +17,12 @@
 <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
 <!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
 <body>
 
@@ -60,7 +60,7 @@
 
         </div>
         <div id="Intro2">
-            <b> El 27 de febrero de 1933 el edificio del Parlamento ardi&oacute; en llamas. Los nazis se apresuraron a culpar a los comunistas del incendi&oacute;. Miles de comunistas fueron detenidos y enviados a campos de concentraci&oacute;n. Un decreto presidencial otorg&oacute; al Canciller Hitler poderes de emergencia que le permitieron tomar todo tipo de decisiones y acciones sin mayores obst&aacute;culos.
+            <b> El 27 de febrero de 1933 el edificio del Parlamento ardi&oacute; en llamas. Los nazis se apresuraron a culpar a los comunistas del incendio. Miles de comunistas fueron detenidos y enviados a campos de concentraci&oacute;n. Un decreto presidencial otorg&oacute; al Canciller Hitler poderes de emergencia que le permitieron tomar todo tipo de decisiones y acciones sin mayores obst&aacute;culos.
 </b>
         </div>
 
