--- a/etapadesp_emigracion.html
+++ b/etapadesp_emigracion.html
@@ -8,88 +8,83 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="Styles/style4.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
-<script src="js/lightbox.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <!-- Start VideoLightBox.com HEAD section -->
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <img id="Logo" src="Header/Logo.png"/>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
-
-
-
-
-
-        </header>
-     </div>
-    <div class="Intro">
-               <img id="imgEtapa" src="Etapa2/header.png">
-       </div>
-    <div id="container">
-                <div class="IntroT">
-                    <b id="fecha">1933 - 1939</b>
-                    <b id="nombreEtapa">Nazismo y al poder</b>
-                </div>
-
-        <div id="ImagenPrincipal">
-            <img src="Etapa2/emigracion/1.png">
-
+            </header>
         </div>
-        <div id="FondoTexto">
-            <div id="DescripcionImagen">
-            <br><br><br>Caricatura pol&iacute;tica titulada &ldquo;La conferencia de Evian los guiara hacia la libertad&rdquo; , The New York Times, 3de julio de 1938.</div>
+        <div class="Intro">
+            <img id="imgEtapa" src="Etapa2/header.png">
         </div>
-
-        <div id="ImagenPequena">
-            <img id="foto" src="Etapa2/emigracion/2.png">
-            <div id="DivDescr">
-            <b id="Descr">Ni&ntilde;os jud&iacute;os viviendo en un orfanato en Suecia, luego de escapar de Dinamarca.</b>
+        <div id="container">
+            <div class="IntroT">
+                <b id="fecha">1933 - 1939</b>
+                <b id="nombreEtapa">Nazismo al poder</b>
             </div>
-        </div>
-        <div id="Texto2">
-            <b id="Titulo"> Emigraci&oacute;n<br><br></b>
-            <b id="text">En julio de 1938 se reunieron en Evian, Francia, representantes de 32 pa&iacute;ses con el objetivo de lograr que m&aacute;s jud&iacute;os pudieran emigrar a sus pa&iacute;ses. Sin embargo, los participantes, alegando diferentes motivos no dieron una respuesta positiva a la situaci&oacute;n, y la conferencia termin&oacute; sin mayores decisiones ni cambios en las pol&iacute;ticas de inmigraci&oacute;n.
 
-<br><br>
-            &ldquo;No tenemos un problema racial y no deseamos importar uno&rdquo;<br>
-Representante de Australia
-            </b>
+            <div id="ImagenPrincipal">
+                <img src="Etapa2/emigracion/1.png">
+
+            </div>
+            <div id="FondoTexto">
+                <div id="DescripcionImagen">
+                    <br><br><br>Caricatura pol&iacute;tica titulada &ldquo;La conferencia de Evian los guiara hacia la libertad&rdquo; , The New York Times, 3de julio de 1938.</div>
+            </div>
+
+            <div id="ImagenPequena">
+                <img id="foto" src="Etapa2/emigracion/2.png">
+                <div id="DivDescr">
+                    <b id="Descr">Ni&ntilde;os jud&iacute;os viviendo en un orfanato en Suecia, luego de escapar de Dinamarca.</b>
+                </div>
+            </div>
+            <div id="Texto2">
+                <b id="Titulo"> Emigraci&oacute;n<br><br></b>
+                <b id="text">En julio de 1938 se reunieron en Evian, Francia, representantes de 32 pa&iacute;ses con el objetivo de lograr que m&aacute;s jud&iacute;os pudieran emigrar a sus pa&iacute;ses. Sin embargo, los participantes, alegando diferentes motivos no dieron una respuesta positiva a la situaci&oacute;n, y la conferencia termin&oacute; sin mayores decisiones ni cambios en las pol&iacute;ticas de inmigraci&oacute;n.
+
+                    <br><br>
+                    &ldquo;No tenemos un problema racial y no deseamos importar uno&rdquo;<br>
+                    Representante de Australia
+                </b>
 
 
-        </div>
-        <div id="Seccion1">
-        </div>
-        <div id="Explicacion">
-            <b id="TextoGrande">"Para los jud&iacute;os de Europa Occidental y Central , el mundo esta dividido entre lugares que no pueden ir y lugares que no pueden entrar" <br></b>
-        </div>
-        <div id="Explicacion2">
-            <b id="Autor"> Jaim Weizmann<br></b>
-        </div>
-        <div id="Seccion2">
-        </div>
+            </div>
+            <div id="Seccion1">
+            </div>
+            <div id="Explicacion">
+                <b id="TextoGrande">"Para los jud&iacute;os de Europa Occidental y Central , el mundo esta dividido entre lugares que no pueden ir y lugares que no pueden entrar" <br></b>
+            </div>
+            <div id="Explicacion2">
+                <b id="Autor"> Jaim Weizmann<br></b>
+            </div>
+            <div id="Seccion2">
+            </div>
 
-        <div id="SigEtapa">
+            <div id="SigEtapa">
 
-        <pre id="SiguienteEtapa">  <a href="etapadesp_legislacion_nochecristales.html">Etapa Anterior</a>  |  <a href="etapa_expansion_guetos.html">Siguiente Etapa</a></pre>
-        </div>
+                <pre id="SiguienteEtapa">  <a href="etapadesp_legislacion_nochecristales.html">Etapa Anterior</a>  |  <a href="etapa_expansion_guetos.html">Siguiente Etapa</a></pre>
+            </div>
 
 
         </div>
@@ -99,32 +94,30 @@ Representante de Australia
 
 
 
-<nav class="pushy pushy-left">
-    <ul>
-           <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
-    </ul>
+        <nav class="pushy pushy-left">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
+            </ul>
 
-<nav>
+            <nav>
 
-<script>
+                <script>
 
-$(document).ready(function(){
+                    $(document).ready(function(){
 
-$("#MenuIcon").click(function(){
+                        $("#MenuIcon").click(function(){
 
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
-
-
-  });
-    </script>
+                            $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
- <script src="js/pushy.min.js"></script>
+                        });
+                </script>
 
 
+                <script src="js/pushy.min.js"></script>
 
 
 
@@ -134,4 +127,6 @@ $("#MenuIcon").click(function(){
 
 
 
-</body>
+
+
+                </body>
