--- a/etapadesp_findelaguerra.html
+++ b/etapadesp_findelaguerra.html
@@ -17,12 +17,12 @@
 <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
 <!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
 <body>
 
@@ -46,7 +46,7 @@
         </div>
         <div id="container">
                 <div class="IntroT">
-                    <b id="fecha">VER FECHA 1945</b>
+                    <b id="fecha">1945</b>
                     <b id="nombreEtapa">Fin de la guerra y legado de la Sho&aacute;</b>
                 </div>
 
@@ -77,13 +77,7 @@ Los jud&iacute;os que sobrevivieron al asesinato se abocaron a la b&uacute;squed
 
         </div>
     <div id="TxtDescr">
-        <b id="TextDesc">Los sobrevivientes de la barbarie nazi emigraron a diversos pa&iacute;ses como pueden ser Estados Unidos, lo que posteriormente ser&iacute;a Israel, Sud&aacute;frica, Australia y diversos pa&iacute;ses Latinoamericanos.
-
-
-Algunos de los que sobrevivieron a la barbarie llegaron al Uruguay. El volver a vivir no fue una tarea f&aacute;cil.
-Para algunos el volver a empezar estaba condicionado al silencio, a guardar el pasado en un cofre sellado para lograr encontrar un nuevo sentido a la vida. Para otros, el contar lo ocurrido, les dio fuerzas para seguir viviendo.
-A trav&eacute;s de todos ellos, con sus relatos o sus silencios, la Sho&aacute; adopt&oacute; una presencia concreta entre nosotros.
-Los sobrevivientes apostaron a la vida.
+        <b id="TextDesc">Los sobrevivientes de la barbarie nazi emigraron a diversos pa&iacute;ses, fundamentalmente a Estados Unidos, lo que posteriormente ser&iacute;a Israel, Sud&aacute;frica, Australia y varios pa&iacute;ses latinoamericanos. Algunos de los que sobrevivieron a la barbarie llegaron a Uruguay, pa&iacute;s que les abri&oacute; sus puertas y les dio posibilidades de reconstruir sus vidas. Volver a vivir no fue una tarea f&aacute;cil. Para algunos volver a empezar estaba condicionado al silencio, a guardar el pasado en un cofre sellado para lograr encontrar un nuevo sentido a la vida. Para otros, contar lo ocurrido, representaba una manera de obtener fuerzas para seguir viviendo. A trav&eacute;s de todos ellos, con sus relatos o sus silencios, la Sho&aacute; adopt&oacute; una presencia concreta entre nosotros. Los sobrevivientes apostaron a la vida.
 
 </b>
     </div>
