--- a/etapadesp_legislacion_nochecristales.html
+++ b/etapadesp_legislacion_nochecristales.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-         <title>Legislacion anti judia y Noche de los cristales rotos</title>
+        <title>Legislacion anti judia y Noche de los cristales rotos</title>
         <meta name="Legalizacion anti judia y Noche de los cristales rotos" content="Etapa despelegada"/>
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
         <link rel="stylesheet" href="css/normalize.css">
@@ -8,28 +8,28 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="Styles/style2.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
-<script src="js/lightbox.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <!-- Start VideoLightBox.com HEAD section -->
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <a href="index.html" ><img id="Logo" src="Header/Logo.png"/> </a>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
@@ -37,109 +37,108 @@
 
 
 
+            </header>
+        </div>
+        <div class="Intro">
+            <img id="imgEtapa" src="Etapa2/header.png">
+        </div>
+        <div id="container">
+            <div class="IntroT">
+                <b id="fecha">1933 - 1939</b>
+                <b id="nombreEtapa">Nazismo al poder</b>
+            </div>
 
-        </header>
-     </div>
-    <div class="Intro">
-               <img id="imgEtapa" src="Etapa2/header.png">
-      </div>
-    <div id="container">
-                <div class="IntroT">
-                    <b id="fecha">1933 - 1939</b>
-                    <b id="nombreEtapa">Nazismo y al poder</b>
+
+
+            <div id="Introduccion">
+                <b id="Titulo">Legislaci&oacute;n anti jud&iacute;a</b>
+            </div>
+            <div class="Introduccion2">
+
+
+                <b id="Texto"> A trav&eacute;s de leyes los jud&iacute;os fueron excluidos de toda vida pol&iacute;tica y cultural en Alemania.
+                    Los intelectuales y los profesionales estuvieron entre las primeras victimas de la persecuci&oacute;n. Se limit&oacute; el ingreso de jud&iacute;os a escuelas y universidades, se les quit&oacute; la ciudadan&iacute;a, se les prohibi&oacute; asistir a teatros, cines y conciertos, y muchas otras prohibiciones.</b>
+
+            </div>
+            <div id="Imagenes">
+                <div id="imagenGrande">
+                    <img id="imagen1" src="Etapa2/legislacion/img-grande.png">
                 </div>
+                <div>
+                    <img id="imagen2" src="Etapa2/legislacion/img-chica.png">
+                    <img id="imagen3" src="Etapa2/legislacion/img-chica-2.png">
+                    <div id="imagenesChicas2">
+                        <img id="imagen4" src="Etapa2/legislacion/img-chica-3.png">
+                        <img id="imagen5" src="Etapa2/legislacion/img-chica-4.png">
 
-
-
-        <div id="Introduccion">
-            <b id="Titulo">Legislaci&oacute;n anti jud&iacute;a</b>
-        </div>
-        <div class="Introduccion2">
-
-
-                    <b id="Texto"> A trav&eacute;s de leyes los jud&iacute;os fueron excluidos de toda vida pol&iacute;tica y cultural en Alemania.
-                                  Los intelectuales y los profesionales estuvieron entre las primeras victimas de la persecuci&oacute;n.Se limit&oacute; el ingreso de jud&iacute;os a escuelas y universidades, se les quit&oacute; la ciudadan&iacute;a, se les prohibi&oacute; asistir a teatros, cines y conciertos, y muchas otras prohibiciones.</b>
-
-        </div>
-        <div id="Imagenes">
-            <div id="imagenGrande">
-            <img id="imagen1" src="Etapa2/legislacion/img-grande.png">
+                    </div>
+                </div>
             </div>
-            <div>
-            <img id="imagen2" src="Etapa2/legislacion/img-chica.png">
-            <img id="imagen3" src="Etapa2/legislacion/img-chica-2.png">
-            <div id="imagenesChicas2">
-                <img id="imagen4" src="Etapa2/legislacion/img-chica-3.png">
-                <img id="imagen5" src="Etapa2/legislacion/img-chica-4.png">
+            <div class="TextoPrincipal">
+                <b id="Titulo">Noche de los Cristales Rotos</b>
+            </div>
+            <div class="Introduccion2">
+                <b id="Texto">En la noche del 9 al 10 de noviembre de 1938 comenz&oacute; un brutal ataque
+                    contra los jud&iacute;os en todo el territorio del Reich. Bajo la denominaci&oacute;n de
+                    &ldquo;manifestaciones espont&aacute;neas&rdquo; las autoridades nazis organizaron crueles
+                    ataques sobre las personas y los bienes jud&iacute;os. Sinagogas fueron incendiadas y libros sagrados fueron quemados. Miles de negocios fueron destruidos y
+                    hogares jud&iacute;os fueron allanados. Alrededor de 30.000 hombres fueron arrestados y trasladados a campos de concentraci&oacute;n.
+                </b>
+            </div>
+            <div id="ImagenDescr">
+                <img id="imagen6" src="etapa_desplegada_2/Imagen5.jpg">
+                <div>
+                    <img id="imagentexto" src=etapa_desplegada_2/imgTexto.jpg>
+                </div>
+            </div>
+            <div id="ImagenesExtra">
+                <img id="imgextra1" src="Etapa2/legislacion/img-horizontales/1.png">
+                <img id="imgextra2" src="Etapa2/legislacion/img-horizontales/2.png">
+                <img id="imgextra3" src="Etapa2/legislacion/img-horizontales/3.png">
+
+
 
             </div>
-            </div>
-        </div>
-        <div class="TextoPrincipal">
-            <b id="Titulo">Noche de los Cristales Rotos</b>
-            </div>
-        <div class="Introduccion2">
-            <b id="Texto">En la noche del 9 al 10 de noviembre de 1938 comenz&oacute; un brutal ataque
-                         contra los jud&iacute;os en todo el territorio del Reich. Bajo la denominaci&oacute;n de
-                         &ldquo;manifestaciones espont&aacute;neas&rdquo; las autoridades nazis organizaron crueles
-                         ataques sobre las personas y los bienes jud&iacute;os. Sinagogas fueron incendiadas y libros sagrados fueron quemados. Miles de negocios fueron destruidos y
-                         hogares jud&iacute;os fueron allanados. Alrededor de 30.000 hombres fueron arrestados y trasladados a campos de concentraci&oacute;n.
-           </b>
-        </div>
-        <div id="ImagenDescr">
-            <img id="imagen6" src="etapa_desplegada_2/Imagen5.jpg">
-            <div>
-            <img id="imagentexto" src=etapa_desplegada_2/imgTexto.jpg>
+            <div id="SigEtapa">
+                <pre id="SiguienteEtapa">  <a href="etapadesp_boicot_quemalibros_arte.html">Etapa Anterior</a>  |  <a href="etapadesp_emigracion.html">Siguiente Etapa</a></pre>
             </div>
         </div>
-        <div id="ImagenesExtra">
-            <img id="imgextra1" src="Etapa2/legislacion/img-horizontales/1.png">
-            <img id="imgextra2" src="Etapa2/legislacion/img-horizontales/2.png">
-            <img id="imgextra3" src="Etapa2/legislacion/img-horizontales/3.png">
-
-
-
+        <div class="footer">
         </div>
-         <div id="SigEtapa">
-      <pre id="SiguienteEtapa">  <a href="etapadesp_boicot_quemalibros_arte.html">Etapa Anterior</a>  |  <a href="etapadesp_emigracion.html">Siguiente Etapa</a></pre>
-    </div>
-        </div>
-    <div class="footer">
-    </div>
-    <nav class="pushy pushy-left">
-    <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
-    </ul>
+        <nav class="pushy pushy-left">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
+            </ul>
 
-<nav>
+            <nav>
 
-<script>
+                <script>
 
-$(document).ready(function(){
+                    $(document).ready(function(){
 
-$("#MenuIcon").click(function(){
+                        $("#MenuIcon").click(function(){
 
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
+                            $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
-  });
+                        });
 
- $("#img").hover(function(){
-    $("#img").attr("src","SegundaPag/img_chica_hover.png");
+                        $("#img").hover(function(){
+                            $("#img").attr("src","SegundaPag/img_chica_hover.png");
 
-    },
-    function(){
-     $("#img").attr("src","SegundaPag/img_chica.png");
-  });
-});
+                        },
+                                        function(){
+                                            $("#img").attr("src","SegundaPag/img_chica.png");
+                                        });
+                    });
 
-</script>
+                </script>
 
 
- <script src="js/pushy.min.js"></script>
+                <script src="js/pushy.min.js"></script>
 
 
 
@@ -151,4 +150,4 @@ $("#MenuIcon").click(function(){
 
 
 
-</body>
+                </body>
