--- a/indexLegado.html
+++ b/indexLegado.html
@@ -1,144 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Legado</title>
-		<meta name="description" content="Fullscreen Layout with Page Transitions" />
-		<meta name="keywords" content="fullscreen layout, boxes, responsive, page transitions, css transitions, jquery, portfolio, template" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="Legado/text/css" href="Legado/css/component.css" />
-          <link href="Legado/fonts/stylesheet.css" rel="stylesheet" />
-		<script src="Legado/js/modernizr.custom.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Legado</title>
+        <meta name="description" content="Fullscreen Layout with Page Transitions" />
+        <meta name="keywords" content="fullscreen layout, boxes, responsive, page transitions, css transitions, jquery, portfolio, template" />
+        <meta name="author" content="Codrops" />
+        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="stylesheet" type="Legado/text/css" href="Legado/css/component.css" />
+        <link href="Legado/fonts/stylesheet.css" rel="stylesheet" />
+        <script src="Legado/js/modernizr.custom.js"></script>
 
         <style>
-                #cont-header{
-                    width: 100%;
-                    background-color:#000;
-                    position: relative;
-                    z-index: 99;
-                }
-                header{
-                  width:970px;
-                  height:55px;
-                  margin: 0 auto;
-                }
-                header #MenuIcon{
-                    margin-top: 10px;
-                    float: right;
-                    margin-left:700px;
-                }
+            #cont-header{
+                width: 100%;
+                background-color:#000;
+                position: relative;
+                z-index: 99;
+            }
+            header{
+                width:970px;
+                height:55px;
+                margin: 0 auto;
+            }
+            header #MenuIcon{
+                margin-top: 10px;
+                float: right;
+                margin-left:700px;
+            }
         </style>
-	</head>
-	<body>
-         <div id="cont-header">
-         	<header id="encabezado">
-    	  		<a href=index.html><img id="MenuIcon" src="Legado/images/boton.png"/></a>
+    </head>
+    <body>
+        <div id="cont-header">
+            <header id="encabezado">
+                <a href=index.html><img id="MenuIcon" src="Legado/images/boton.png"/></a>
             </header>
         </div>
-		<div class="container">
-			<div id="bl-main" class="bl-main">
-				<section>
-					<div class="bl-box">
+        <div class="container">
+            <div id="bl-main" class="bl-main">
+                <section>
+                    <div class="bl-box">
                         <img src="Legado/images/derechos.png">
                     </div>
                     <div class="bl-content">
-						<img src="Legado/images/tituloDdhh.png" style="margin-left: 230px; margin-top: 20px;"/>
-                        <p>Aca iria algo relacionado de dos oraciones</p>
+                        <img src="Legado/images/tituloDdhh.png" style="margin-left: 230px; margin-top: 20px;"/>
+                        <p>La organizaci&oacute;n Youth For Human Rights (J&oacute;venes por los Derechos Humanos) nos ensa&ntilde;a algunos de nuestros derechos fundamentales por medio de breves cortometrajes. Conocerlos y trabajar para que sean respetados es responsabilidad de todos.</p>
                         <video  width="100%" height="100%" controls>
                             <source src="Legado/derechos_humanos.mp4" type="video/mp4"/>
                             Your browser does not support the video tag.
                         </video>
                     </div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
-				<section id="bl-work-section">
-					<div class="bl-box">
-						<img src="Legado/images/bulling.png"/>
-					</div>
-					<div class="bl-content">
-						<H2>BULLYING Y ROLES</h2>
-						<p>Mung bean maize dandelion sea lettuce catsear bunya nuts ricebean tatsoi caulie horseradish pea.</p>
+                    <span class="bl-icon bl-icon-close"></span>
+                </section>
+                <section id="bl-work-section">
+                    <div class="bl-box">
+                        <img src="Legado/images/bulling.png"/>
+                    </div>
+                    <div class="bl-content">
+                        <H2>BULLYING Y ROLES</h2>
                         <video width="100%" height="100%" controls>
                             <source src="Legado/30octh264.mp4" type="video/mp4"/>
                             Your browser does not support the video tag.
                         </video>
-						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="#"><img src="Legado/imagenes_bullying/roles/victimario.png" /></a></li>
-							<li data-panel="panel-2"><a href="#"><img src="Legado/imagenes_bullying/roles/complice.png" /></a></li>
-							<li data-panel="panel-3"><a href="#"><img src="Legado/imagenes_bullying/roles/indiferente.png" /></a></li>
-							<li data-panel="panel-4"><a href="#"><img src="Legado/imagenes_bullying/roles/victima.png" /></a></li>
-                            <li data-panel="panel-4"><a href="#Type"><img src="Legado/imagenes_bullying/roles/rescatador.png" /></a></li>
-						</ul>
-						<p class ="Type" id="Type"> </p>
-                        <p>En la vida real, tal como sucedía en la Shoá (salvando las distancias), permanentemente estamos posicionándonos en alguno de estos personajes y adoptamos algunas de estas posturas ante actos de violencia o discriminación que suceden a nuestro alrededor.</p>
-					</div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
-				<section>
-					<div class="bl-box">
-						<img src="Legado/images/historia.png">
-					</div>
-					<div class="bl-content">
-						<h2></h2>
-						<article>
-							<h3>Querido Profesor:</h3>
-							<p>Soy un sobreviviente de un campo de concentración. Mis ojos vieron lo que ningún ser humano debería testimoniar: cámaras de gas construidas por ingenieros ilustres, niños envenenados por médicos altamente especializados. Recién nacidos asesinados por enfermeras diplomadas, mujeres y bebés quemados por gente formada en escuelas, liceos y universidades.</p><p> Por eso querido profesor, dudo de la educación, y le formulo un pedido: ayude a sus estudiantes a volverse humanos. Su esfuerzo, profesor, nunca debe producir monstruos eruditos y cultos, sicópatas y Eichmans educados. Leer y escribir son importantes solamente si están al servicio de hacer a nuestros jóvenes seres más humanos.</p>
-						</article>
-					</div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
+                        <ul id="bl-work-items">
+                            <li data-panel="panel-1"><a href="#"><img src="Legado/imagenes_bullying/roles/victimario.png" /></a></li>
+                            <li data-panel="panel-2"><a href="#"><img src="Legado/imagenes_bullying/roles/complice.png" /></a></li>
+                            <li data-panel="panel-3"><a href="#"><img src="Legado/imagenes_bullying/roles/indiferente.png" /></a></li>
+                            <li data-panel="panel-4"><a href="#"><img src="Legado/imagenes_bullying/roles/victima.png" /></a></li>
+                            <li data-panel="panel-5"><a href="#"><img src="Legado/imagenes_bullying/roles/rescatador.png" /></a></li>
+                        </ul>
+                        <p class ="Type" id="Type"> </p>
+                        <p>En la vida real, tal como suced&iacute;a en la Sho&aacute; (salvando las distancias), permanentemente estamos posicion&aacute;ndonos en alguno de estos personajes y adoptamos algunas de estas posturas ante actos de violencia o discriminaci&oacute;n que suceden a nuestro alrededor.<br>Te pedimos te tomes un tiempo para responder con sinceridad.Vos,
+                            <br>¿Qué rol ocup&aacute;s habitualmente ante este tipo de situaciones?
+                            <br>¿Qué rol te gustar&iacute;a ocupar?
+                            <br>¿Qué rol/roles consider&aacute;s peligrosos para la construcci&oacute;n de una sociedad mejor?
+                        </p>
+                    </div>
+                    <span class="bl-icon bl-icon-close"></span>
+                </section>
+                <section>
+                    <div class="bl-box">
+                        <img src="Legado/images/historia.png">
+                    </div>
+                    <div class="bl-content">
+                        <h2>Mensaje de un Sobreviviente</h2>
+                        <p>Como parte del Legado de la Sho&aacute;, presentamos la siguiente carta que escribi&oacute; un Director de un Liceo (sobreviviente de la Sho&aacute;) dirigida a los docentes previo al inicio de cursos.
+                        </p>
+                        <article>
+                            <h3>Querido Profesor:</h3>
+                            <p>Soy un sobreviviente de un campo de concentraci&oacute;n. Mis ojos vieron lo que ning&uacute;n ser humano deber&iacute;a testimoniar: c&aacute;maras de gas construidas por ingenieros ilustres, ni&ntilde;os envenenados por m&eacute;dicos altamente especializados. Reci&eacute;n nacidos asesinados por enfermeras diplomadas, mujeres y beb&eacute;s quemados por gente formada en escuelas, liceos y universidades.</p><p> Por eso querido profesor, dudo de la educaci&oacute;n, y le formulo un pedido: ayude a sus estudiantes a volverse humanos. Su esfuerzo, profesor, nunca debe producir monstruos eruditos y cultos, sic&oacute;patas y Eichmans educados. Leer y escribir son importantes solamente si est&aacute;n al servicio de hacer a nuestros j&oacute;venes seres m&aacute;s humanos.</p>
+                        </article>
+                    </div>
+                    <span class="bl-icon bl-icon-close"></span>
+                </section>
                 <div class="bl-panel-items" id="bl-panel-work-items">
-					<div data-panel="panel-1">
-						<div>
-							<img src="Legado/imagenes_bullying/roles/victimario.png" />
-							<h3>Victimario</h3>
-							<p></p>
-						</div>
-					</div>
-					<div data-panel="panel-2">
-						<div>
-							<img src="Legado/imagenes_bullying/roles/complice.png" />
-							<h3>Cómplice</h3>
-							<p></p>
-						</div>
-					</div>
-					<div data-panel="panel-3">
-						<div>
-							<img src="Legado/imagenes_bullying/roles/indiferente.png" />
-							<h3>Indiferente</h3>
-							<p></p>
-						</div>
-					</div>
-					<div data-panel="panel-4">
-						<div>
-							<img src="Legado/imagenes_bullying/roles/victima.png" />
-							<h3>Victima</h3>
-							<p></p>
-						</div>
-					</div>
-					<div data-panel="panel-5">
-						<div>
-							<img src="Legado/imagenes_bullying/roles/rescatador.png" />
-							<h3>Rescatador</h3>
-							<p></p>
-						</div>
-					</div>
-					<nav>
-						<span class="bl-next-work">&gt; Next Project</span>
-						<span class="bl-icon bl-icon-close"></span>
-					</nav>
-				</div>
+                    <div data-panel="panel-1">
+                        <div>
+                            <img src="Legado/imagenes_bullying/roles/victimario.png" />
+                            <h3>Victimario</h3>
+                            <p>Aquel que causa el da&ntilde;o a un tercero en un momento determinado.</p>
+                        </div>
+                    </div>
+                    <div data-panel="panel-2">
+                        <div>
+                            <img src="Legado/imagenes_bullying/roles/complice.png" />
+                            <h3>C&oacute;mplice</h3>
+                            <p>Aquel que frente a una situaci&oacute;n apoya a y colabora con el victimario.</p>
+                        </div>
+                    </div>
+                    <div data-panel="panel-3">
+                        <div>
+                            <img src="Legado/imagenes_bullying/roles/indiferente.png" />
+                            <h3>Indiferente</h3>
+                            <p>Aquel que por omisi&oacute;n permite que la situaci&oacute;n transcurra inalterada.</p>
+                        </div>
+                    </div>
+                    <div data-panel="panel-4">
+                        <div>
+                            <img src="Legado/imagenes_bullying/roles/victima.png" />
+                            <h3>V&iacute;ctima</h3>
+                            <p>Aquella persona que sufre un da&ntilde;o por acci&oacute;n u omisi&oacute;n de un tercero.</p>
+                        </div>
+                    </div>
+                    <div data-panel="panel-5">
+                        <div>
+                            <img src="Legado/imagenes_bullying/roles/rescatador.png" />
+                            <h3>Rescatador</h3>
+                            <p>Aquel que decide actuar frente a una situaci&oacute;n desigual para contrarrestarla.</p>
+                        </div>
+                    </div>
+                    <nav>
+                        <span class="bl-next-work">&gt;Siguiente Rol</span>
+                        <span class="bl-icon bl-icon-close"></span>
+                    </nav>
                 </div>
             </div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="Legado/js/boxlayout.js"></script>
-		<script>
-			$(function() {
-				Boxlayout.init();
-			});
-		</script>
-	</body>
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="Legado/js/boxlayout.js"></script>
+        <script>
+            $(function() {
+                Boxlayout.init();
+            });
+        </script>
+    </body>
 </html>
